objects/mcsocsel10__SocialSellingActionableActivity__c.object
<CustomObject>
    <fields>
        <fullName>mcsocsel10__PostID__c</fullName>
        <externalId>true</externalId>
        <label>Post ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>task</fullName>
                    <label>Task</label>
                </value>
                <value>
                    <fullName>share</fullName>
                    <label>Share</label>
                </value>
                <value>
                    <fullName>contact</fullName>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>lead</fullName>
                    <label>Lead</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mcsocsel10__URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Social Selling Actionable Activity</label>
    <nameField>
        <label>Social Selling Actionable Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Selling Actionable Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>